[gd_scene load_steps=13 format=3 uid="uid://darjkipmtn7hl"]

[ext_resource type="Texture2D" uid="uid://bgq5cpsdyschb" path="res://assets/ui/rag_title.png" id="1_85i3q"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_dmolc"]
[ext_resource type="PackedScene" uid="uid://b6xr2syokqdbv" path="res://scenes/ui/basic_button.tscn" id="2_yusnx"]
[ext_resource type="Texture2D" uid="uid://bj1cb6qph8dat" path="res://assets/ui/btn_blue.png" id="3_xv2md"]
[ext_resource type="AudioStream" uid="uid://6xht2lgt7d18" path="res://assets/sounds/click.wav" id="4_f7uws"]
[ext_resource type="Texture2D" uid="uid://cbkqs7ei4mr8t" path="res://assets/ui/btn_white.png" id="6_wvjki"]
[ext_resource type="Texture2D" uid="uid://wryrl7q3n327" path="res://assets/ui/win_select.png" id="7_for2k"]
[ext_resource type="Texture2D" uid="uid://chey6sokvl15f" path="res://assets/sprites/ArcherF/archerF_0001.png" id="8_e8gt6"]
[ext_resource type="AudioStream" uid="uid://fpec6iwu7hgb" path="res://assets/music/MainMenu.mp3" id="9_d2j5o"]
[ext_resource type="PackedScene" uid="uid://ccarcjr68xhqe" path="res://scenes/ui/audio_settings.tscn" id="9_jns3v"]
[ext_resource type="Texture2D" uid="uid://o2jwj2rv50ku" path="res://assets/sprites/HeadsF/HeadF36_0001.png" id="9_ois4n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0cgm8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmolc")

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_85i3q")

[node name="MenuButtons" type="PanelContainer" parent="Background"]
layout_mode = 0
offset_left = 201.0
offset_top = 448.0
offset_right = 354.0
offset_bottom = 608.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0cgm8")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MenuButtons"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="StartButton" parent="Background/MenuButtons/VBoxContainer" instance=ExtResource("2_yusnx")]
layout_mode = 2
size_flags_stretch_ratio = 1.5
text = "Start
"
texture = ExtResource("3_xv2md")
sound = ExtResource("4_f7uws")

[node name="OptionsButton" parent="Background/MenuButtons/VBoxContainer" instance=ExtResource("2_yusnx")]
layout_mode = 2
text = "Options
"
texture = ExtResource("3_xv2md")
sound = ExtResource("4_f7uws")

[node name="ExitButton" parent="Background/MenuButtons/VBoxContainer" instance=ExtResource("2_yusnx")]
layout_mode = 2
text = "Exit
"
texture = ExtResource("6_wvjki")

[node name="CharacterSelect" type="PanelContainer" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -226.0
offset_right = 287.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterBackground" type="TextureRect" parent="Background/CharacterSelect"]
layout_mode = 2
texture = ExtResource("7_for2k")

[node name="Character" parent="Background/CharacterSelect/CharacterBackground" instance=ExtResource("2_yusnx")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 61.0
offset_top = -126.0
offset_right = 189.0
offset_bottom = 9.0
grow_vertical = 2
text = ""
texture = ExtResource("8_e8gt6")
sound = ExtResource("4_f7uws")

[node name="TextureRect" parent="Background/CharacterSelect/CharacterBackground/Character" index="0"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -23.5
offset_right = 18.0
offset_bottom = 57.5

[node name="TextureRect2" type="TextureRect" parent="Background/CharacterSelect/CharacterBackground/Character"]
layout_mode = 0
offset_left = 49.0
offset_top = 22.0
offset_right = 89.0
offset_bottom = 62.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("9_ois4n")

[node name="ReturnButton" parent="Background/CharacterSelect/CharacterBackground" instance=ExtResource("2_yusnx")]
layout_mode = 0
offset_left = 461.0
offset_top = 200.0
offset_right = 541.0
offset_bottom = 231.0
text = "Return
"
texture = ExtResource("6_wvjki")

[node name="AudioSettings" parent="Background" instance=ExtResource("9_jns3v")]
visible = false
layout_mode = 1
offset_top = -25.0
offset_bottom = -25.0

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_d2j5o")
autoplay = true
bus = &"BGM"

[connection signal="button_up" from="Background/MenuButtons/VBoxContainer/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="Background/MenuButtons/VBoxContainer/StartButton" to="." method="_on_basic_button_button_up"]
[connection signal="pressed" from="Background/MenuButtons/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Background/MenuButtons/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="button_up" from="Background/MenuButtons/VBoxContainer/ExitButton" to="." method="_on_exit_button_button_up"]
[connection signal="pressed" from="Background/MenuButtons/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="button_up" from="Background/CharacterSelect/CharacterBackground/Character" to="." method="_on_character_button_up"]
[connection signal="pressed" from="Background/CharacterSelect/CharacterBackground/Character" to="." method="_on_character_pressed"]
[connection signal="pressed" from="Background/CharacterSelect/CharacterBackground/ReturnButton" to="." method="_on_return_button_pressed"]

[editable path="Background/MenuButtons/VBoxContainer/StartButton"]
[editable path="Background/CharacterSelect/CharacterBackground/Character"]
